# naiptvplayer

./: .gitignore  build-release.ts  index.html  latest.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  signature.key.pub
src/: App.css  App.tsx  db.ts  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  vlc.rs
src/components/: UpdateNotification.tsx
src/hooks/: useAccount.ts  useUpdater.ts
src/views/: AccountsView.tsx  DashboardView.tsx  LiveTVView.tsx  MoviesView.tsx  TVShowsView.tsx
